@@ -3,12 +3,8 @@ Bugs
 
 Features
 ========
-get --info for current project if not one given
-Autodetect package available by name (future-proof availability until changes)
-Compilation scenarios (there's something already in Index)
 Fix mangled "interrupted" on ctrl-c in children
 Windows port
-alr init templating system beyond bin/lib (e.g. advanced scenarios)
 
 Library inclusions
 ==================
@@ -22,11 +18,10 @@ Fixes/refactorings
 
 Long term if ever
 =================
-Image of Requisites
 License compatibilities/permissions/restrictions/!!!
-Force re-fetch
 Proper unit testing
-Specify main gpr file? Only useful for executables, since libs may have many
+alr init templating system beyond bin/lib (e.g. advanced scenarios)
+Force re-fetch
 Use libadalang instead of self-compiling
 
 Discarded
